--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
 <link rel="stylesheet" href="./Homepage_files/sty/jemdoc.css" type="text/css">
 <style type="text/css">
 </style>
-<title>Weize QUAN - Homepage</title>
-<link rel="shortcut icon" href="./Homepage_files/fig/me.jpg" >
+<title>Xiaolong Yang - Homepage</title>
+<link rel="shortcut icon" href="./Homepage_files/fig/profile_image.jpg" >
 </head>
 
 
@@ -18,20 +18,20 @@
 <tbody>
   <tr>
     <td width="19%" valign="top" height="173">
-      <img height="225" id="photo" style="padding: 0pt 30pt 0pt 20pt; float: left; display: inline;" src="./Homepage_files/fig/me.jpg">
+      <img height="225" id="photo" style="padding: 0pt 30pt 0pt 20pt; float: left; display: inline;" src="./Homepage_files/fig/profile_image.jpg">
     </td>
     
     <td width="80%" valign="top" height="173">
-      <b><font face="Times New Roman" size="6">Weize QUAN</font><font size="6" face="楷体_GB2312"> （全卫泽）</font><font face="Times New Roman" size="6"></font></b>
+      <b><font face="Times New Roman" size="6">Xiaolong Yang</font><font size="6" face="楷体_GB2312"> （杨小龙）</font><font face="Times New Roman" size="6"></font></b>
       <br><br>      
       <p>
           <br>
-          <a href="http://www.nlpr.ia.ac.cn/nlpren/EN/volumn/home.shtml" target="_blank">National Laboratory of Pattern Recognition</a>
+          <a href="http://mmrc.amss.cas.cn/" target="_blank">Key Laboratory of Mathematics-Mechanization (KLMM)</a>
           <br>
-          <a href="http://english.ia.cas.cn/" target="_blank">Institute of Automation Chinese Academy of Sciences</a>
+          <a href="http://www.amss.ac.cn/" target="_blank">Academy of Mathematics and Systems Science of the Chinese Academy of Sciences (AMSS, CAS)</a>
           <br>
           <br>
-          Email: qweizework AT gmail.com
+          Email: yangxiaolong17@mails.ucas.ac.cn
       </p>
     </td>
   </tr>
