--- a/LARNet.html
+++ b/LARNet.html
@@ -5,7 +5,7 @@
 <link rel="stylesheet" href="./Homepage_files/sty/jemdoc.css" type="text/css">
 <style type="text/css">
 </style>
-<title>GDN_Inpainting</title>
+<title>LARNet</title>
 </head>
 
 
