--- a/index.html
+++ b/index.html
@@ -40,10 +40,10 @@
 
 <h2>Biography</h2>
 <p style="text-align:justify;">
-  I am currently an Assistant Professor at <a href="http://www.nlpr.ia.ac.cn/nlpren/EN/volumn/home.shtml" target="_blank">National Laboratory of Pattern Recognition</a>, <a href="http://english.ia.cas.cn/" target="_blank">Institute of Automation Chinese Academy of Sciences</a>. I earned my PhD in 2020 from NLPR, CASIA, advised by <a href="http://people.ucas.ac.cn/~0005319?language=en" target="_blank">Prof. Xiaopeng Zhang</a> and  <a href="https://sites.google.com/site/yandongming/" target="_blank">Prof. Dong-Ming Yan</a>; and from <a href="http://www.gipsa-lab.fr/" target="_blank">GIPSA-Lab</a>, UGA, France, advised by <a href="http://www.gipsa-lab.grenoble-inp.fr/page_pro?vid=97" target="_blank"> Prof. Denis Pellerin</a> and <a href="http://www.gipsa-lab.grenoble-inp.fr/~kai.wang/encadrement_en.html" target="_blank">Dr. Kai Wang</a>. Before that, I received my Bachelor's degree from <a href="http://english.whut.edu.cn/" target="_blank">Wuhan University of Technology</a> in 2014.
+  I am currently pursuing my PhD degree at <a href="http://www.amss.ac.cn/" target="_blank">Academy of Mathematics and Systems Science of the Chinese Academy of Sciences (AMSS, CAS)</a> and <a href="https://english.ucas.ac.cn/" target="_blank"> University of Chinese Academy of Sciences (UCAS) </a>. My supervisor is <a href="http://www.mmrc.iss.ac.cn/~xhjia/" target="_blank"> Xiaohong Jia. Before that,   I received my Bachelor's degree of <a href="http://math.nwpu.edu.cn/en/home.htm" target="_blank"> Information and Computing Science</a> from <a href="https://en.nwpu.edu.cn/" target="_blank"> Northwestern Polytechnical University (NWPU)</a> in 2017. 
 </p>
 <p> 
-  My research interest includes computer graphics, image processing, and deep learning.
+  My research interest includes computer graphics and computer vision.
 </p>
 
 <h2>Publications</h2>
@@ -52,7 +52,7 @@
   <tbody> 
 
     <!-- Efficient Center Voting for Object Detection and 6D Pose Estimation in 3D Point Cloud -->
-    <tr>
+   <!-- <tr>
       <td>
         <div align="center">
           <img width="180" src="./TIP2021/2021_TIP_6DPose.png" alt="">
@@ -73,7 +73,7 @@
         <br>
         [<a href="./TIP2021/2021_TIP_6DPose.pdf" target="_blank">PDF</a>]
       </td>
-    </tr> 
+    </tr> -->
 
         <!-- Pixel-wise Dense Detector for Image Inpainting -->
     <tr>
@@ -102,7 +102,7 @@
     </tr>
     
     <!-- Scene Text Removal via Cascaded Text Stroke Detection and Erasing -->
-    <tr>
+   <!-- <tr>
       <td>
         <div align="center">
           <img width="180" src="./Text2020/Text2020.png" alt="">
@@ -362,7 +362,7 @@
         [<a href="./LPCF2016/LPCF.pdf" target="_blank">PDF</a>]
 
       </td>
-    </tr>
+    </tr>-->
 
   </tbody>
 </table>  
@@ -371,11 +371,13 @@
 <table id="tbExperiences" border="0" width="100%">
   <tbody>
     <tr>
-      <td> Mar. 2017 - Sep. 2017 &nbsp; Visiting Ph.D. student, Université Grenoble Alpes, CNRS, Grenoble INP, GIPSA-lab, Directed by <a href="http://www.gipsa-lab.grenoble-inp.fr/~kai.wang/encadrement_en.html" target="_blank">Dr. Kai Wang</td>
+      <td> Sep. 2020 - Sep. 2021 &nbsp; Intern student (Rhino-Bird Program), Tencent Technologies Co., Ltd. (Shenzhen), directed by <a href="https://scholar.google.com/citations?user=VTrRNN4AAAAJ&hl=zh-en" target="_blank"> Zhifeng Li</td>
     </tr>
   <tr>
-      <td> Sep. 2016 - Jan. 2017 &nbsp; Intern student, Huawei Technologies Co., Ltd. Shenzhen</td>
+      <td> Nov. 2019 - Mar. 2020 &nbsp; Intern student (Innovative Research Program), Alibaba Group (Beijing). </td>
     </tr>
+    </tr>
+      <td> Mar. 2017 - &nbsp &nbsp &nbsp; Visiting student ,  National Laboratory of Pattern Recognition(NLPR), Institute of Automation, Chinese Academy of Sciences(CASIA) (Beijing), directed by <a href="https://sites.google.com/site/yandongming/" target="_blank"> Prof. Dong-Ming Yan</td>
   </tbody>
 </table>
 
