--- a/LARNet.html
+++ b/LARNet.html
@@ -17,7 +17,7 @@
 <tbody>
   <tr>    
     <td valign="top" align="center">     
-      <b><font size="6" face="Times New Roman" >Pixel-wise Dense Detector for Image Inpainting</font></b>
+      <b><font size="6" face="Times New Roman" >LARNet: Lie Algebra Residual Network for Face Recognition</font></b>
       <br><br>
     </td>
   </tr>
