--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
     <tr>
       <td>
         <div align="center">
-          <img width="180" src="../LARNet/fig/Fig0_headpic.png" alt="">
+          <img width="180" src="https://github.com/paradocx/LARNet/fig/Fig0_headpic.png" alt="">
         </div>
       </td>
       <td>
@@ -95,10 +95,10 @@
         <i>In Proceedings of the 38th International Conference on Machine Learning (ICML2021)</i>
         <br>
         [<a href="LARNet.html" target="_blank">Project Page</a>]
-        [<a href="../LARNet/blob/main/fig/xiaolonyang_ICML2021_Main.pdf" target="_blank">PDF</a>]
-        [<a href="../LARNet/" target="_blank">Code</a>]
-        [<a href="../LARNet/blob/main/fig/xiaolonyang_ICML21_Sup.pdf" target="_blank">Supplement</a>] 
-        [<a href="../LARNet/blob/main/fig/ICML21_LARNet.pptx" target="_blank">Slides</a>]
+        [<a href="https://github.com/paradocx/LARNet/blob/main/fig/xiaolonyang_ICML2021_Main.pdf" target="_blank">PDF</a>]
+        [<a href="https://github.com/paradocx/LARNet/" target="_blank">Code</a>]
+        [<a href="https://github.com/paradocx/LARNet/blob/main/fig/xiaolonyang_ICML21_Sup.pdf" target="_blank">Supplement</a>] 
+        [<a href="https://github.com/paradocx/LARNet/blob/main/fig/ICML21_LARNet.pptx" target="_blank">Slides</a>]
       </td>
     </tr>
     
