--- a/LARNet.html
+++ b/LARNet.html
@@ -24,32 +24,32 @@
 
   <tr>
     <td valign="top" align="center">
-         <font size="4" face="Times New Roman" > <a href="http://evergrow.github.io/"  target="_blank">Ruisong Zhang</a> </font> <font size="2" face="Times New Roman"><sup>1,2</sup></font> &emsp;&emsp;
-         <font size="4" face="Times New Roman" > <a href="http://weizequan.github.io/"  target="_blank">Weize Quan</a> </font> <font size="2" face="Times New Roman"><sup>1,2</sup></font> &emsp;&emsp;
-         <font size="4" face="Times New Roman" > <a href="https://sites.google.com/site/baoyuanwu2015/home"  target="_blank">Baoyuan Wu</a> </font> <font size="2" face="Times New Roman"><sup>3,4</sup></font> &emsp;&emsp;
-         <font size="4" face="Times New Roman" > <a href="https://scholar.google.com/citations?hl=zh-CN&user=VTrRNN4AAAAJ"  target="_blank">Zhifeng Li</a> </font> <font size="2" face="Times New Roman"><sup>5</sup></font> &emsp;&emsp;
-         <font size="4" face="Times New Roman" > <a href="https://sites.google.com/site/yandongming/"  target="_blank">Dong-Ming Yan</a> </font> <font size="2" face="Times New Roman"><sup>1,2</sup></font> &emsp;&emsp;
+         <font size="4" face="Times New Roman" > <a href="http://paradocx.github.io/"  target="_blank"><strong>Xiaolong Yang</strong></a> </font> <font size="2" face="Times New Roman"><sup>1,2</sup></font> &emsp;&emsp;
+         <font size="4" face="Times New Roman" > <a href="http://www.mmrc.iss.ac.cn/~xhjia/"  target="_blank">Xiaohong Jia</a> </font> <font size="2" face="Times New Roman"><sup>1,2</sup></font> &emsp;&emsp;
+         <font size="4" face="Times New Roman" > <a href="https://scholar.google.com/citations?user=FP4FEvwAAAAJ&hl=en"  target="_blank">Dihong Gong</a> </font> <font size="2" face="Times New Roman"><sup>3</sup></font> &emsp;&emsp;
+         <font size="4" face="Times New Roman" > <a href="https://sites.google.com/site/yandongming/"  target="_blank">Dong-Ming Yan</a> </font> <font size="2" face="Times New Roman"><sup>4,2</sup></font> &emsp;&emsp;
+         <font size="4" face="Times New Roman" > <a href="https://scholar.google.com/citations?user=VTrRNN4AAAAJ&hl=zh-en"  target="_blank">Zhifeng Li</a> </font> <font size="2" face="Times New Roman"><sup>3</sup></font> &emsp;&emsp;
+         <font size="4" face="Times New Roman" > <a href="https://scholar.google.com/citations?user=AjxoEpIAAAAJ&hl=zh-en"  target="_blank">Wei Liu</a> </font> <font size="2" face="Times New Roman"><sup>3</sup></font> &emsp;&emsp;
          <br> 
-         <font size="2" face="Times New Roman"> <sup>1</sup></font> <font size="3" face="Times New Roman" ><a href="http://english.ia.cas.cn/" target="_blank">National Laboratory of Pattern Recognition, Institute of Automation, Chinese Academy of Sciences</a></font>
+         <font size="2" face="Times New Roman"> <sup>1</sup></font> <font size="3" face="Times New Roman" ><a href="http://www.amss.ac.cn/" target="_blank">Academy of Mathematics and Systems Science of the Chinese Academy of Sciences (AMSS, CAS)</a></font>
          <br>
-         <font size="2" face="Times New Roman"> <sup>2</sup></font> <font size="3" face="Times New Roman" ><a href="http://english.ucas.ac.cn/" target="_blank">School of Artificial Intelligence, University of Chinese Academy of Sciences</a> </font>
+         <font size="2" face="Times New Roman"> <sup>2</sup></font> <font size="3" face="Times New Roman" ><a href="https://english.ucas.ac.cn/" target="_blank">University of Chinese Academy of Sciences</a> </font>
          <br>
-         <font size="2" face="Times New Roman"> <sup>3</sup></font> <font size="3" face="Times New Roman" ><a href="https://www.cuhk.edu.cn/en" target="_blank">School of Data Science, the Chinese University of Hong Kong</a> </font>
+         <font size="2" face="Times New Roman"> <sup>3</sup></font> <font size="3" face="Times New Roman" ><a href="https://data.qq.com" target="_blank">Tencent Data Platform</a> </font>
          <br>
-         <font size="2" face="Times New Roman"> <sup>4</sup></font> <font size="3" face="Times New Roman" ><a href="http://www.sribd.cn/index.php/en/" target="_blank">Secure Computing Lab of Big Data, Shenzhen Research Institute of Big Data</a> </font>
-         <br>
-         <font size="2" face="Times New Roman"> <sup>5</sup></font> <font size="3" face="Times New Roman" ><a href="https://ai.tencent.com/ailab/en/index" target="_blank">Tencent AI Lab</a> </font>
+         <font size="2" face="Times New Roman"> <sup>4</sup></font> <font size="3" face="Times New Roman" ><a href="http://www.nlpr.ia.ac.cn/nlpren/EN/volumn/home.shtml" target="_blank">National Laboratory of Pattern Recognition</a>, <a href="http://english.ia.cas.cn/" target="_blank">Institute of Automation Chinese Academy of Sciences (NLPR,CASIA)</a> </font>
          <br> <br> <br>
     </td>
     </tr>
 
     <tr>
       <td valign="top" align="center">
-         <img width="90%" src="./GDN_Inpainting_files/teaser.gif">
+         <img width="90%" src="https://github.com/paradocx/LARNet/blob/main/fig/Fig0_headpic.png">
          <br>
          <p style="text-align:justify;">
          <font face="Times New Roman" >
-            Deep inpainting technique fills the semantically correct and visually plausible contents in the missing regions of corrupted images. All above results are presented by our proposed framework.
+            Frontalization or rotation in the feature space. To show the equivalence, we reconstruct the images corresponding to the modified features (blue dot) and provide the visual results for the
+expected frontal faces.
          </font>
          </p>
          <br>
@@ -66,26 +66,29 @@
   <tr>
     <p style="text-align:justify;">
     <font face="Times New Roman" >
-        Recent GAN-based image inpainting approaches adopt an average strategy to discriminate the generated image and output a scalar, which inevitably lose the position information of visual artifacts. Moreover, the adversarial loss and reconstruction loss (e.g., l1 loss) are combined with tradeoff weights, which are also difficult to tune. In this paper, we propose a novel detection-based generative framework for image inpainting, which adopts the min-max strategy in an adversarial process.
-        The generator follows an encoder-decoder architecture to fill the missing regions, and the detector using weakly supervised learning localizes the position of artifacts in a pixel-wise manner. Such position information makes the generator pay attention to artifacts and further enhance them. More importantly, we explicitly insert the output of the detector into the reconstruction loss with a weighting criterion, which balances the weight of the adversarial loss and reconstruction loss automatically rather than manual operation. Experiments on multiple public datasets show the superior performance of the proposed framework.
-    </font>
+        Face recognition is an important yet challenging problem in computer vision. A major challenge in practical face recognition applications lies in significant variations between profile and frontal
+faces. Traditional techniques address this challenge either by synthesizing frontal faces or by pose invariant learning. In this paper, we propose a novel method with Lie algebra theory to
+explore how face rotation in the 3D space affects the deep feature generation process of convolutional neural networks (CNNs). We prove that face rotation in the image space is equivalent to an
+additive residual component in the feature space of CNNs, which is determined solely by the rotation. Based on this theoretical finding, we further design a Lie Algebraic Residual Network
+(LARNet) for tackling pose robust face recognition. Our LARNet consists of a residual subnet for decoding rotation information from input face images, and a gating subnet to learn rotation
+magnitude for controlling the strength of the residual component contributing to the feature learning process. Comprehensive experimental evaluations on both frontal-profile face datasets and general face recognition datasets convincingly
+demonstrate that our method consistently outperforms the state-of-the-art ones.
     </p>
   </tr>
   </tbody>
 </table>
 
 <!-- Method -->
-<h2>Detection-based Framework</h2>
+<h2>Key Theory and Network Architecture</h2>
 <table>
   <tbody>
     <tr>
       <td valign="top" align="center">
-         <img width="90%" src="./GDN_Inpainting_files/Framework.png">
+         <img width="90%" src="https://github.com/paradocx/LARNet/blob/main/fig/fig2_pipeline.png">
          <br>
          <p style="text-align:justify;">
          <font face="Times New Roman" >
-            Our proposed detection-based inpainting framework consists of a generative network to reconstruct corrupted images and a detective network to evaluate outputs of the generator. The generator follows an encoder-decoder architecture with eight residual blocks for extracting multi-scale semantic feature to restore corrupted images. The detector is a seven-layer fully convolutional network, which is augmented by in-network up-sampling and pixel-wise loss for dense evaluation of the inpainted image. The generator and detector are trained by the weighted reconstruction loss and segmentation-based loss, respectively.
-         </font>
+            
         </p>
         <br>
       </td>
@@ -93,17 +96,47 @@
   </tbody>
 </table>
 
+  
+ <!-- Visualization results  -->
+<h2> Visualization Results </h2>
+<table>
+  <tbody>
+    <tr>
+      <td valign="top" align="center">
+         <img width="90%" src="https://github.com/paradocx/LARNet/blob/main/fig/fig3_featuredistribution.png"> 
+         <br>
+         <p style="text-align:justify;">
+         <font face="Times New Roman" >
+
+         </p>
+         <br>
+      </td>
+    </tr>
+    <tr>
+      <td valign="top" align="center">
+         <img width="90%" src="https://github.com/paradocx/LARNet/blob/main/fig/fig4_reconstructionface.png"> 
+         <br><br>
+         <p style="text-align:justify;">
+         <font face="Times New Roman" >
+          Our method is robust to many factors, including gender, head decoration (hat), and face decoration (glasses, beard).
+         </font>
+         </p>
+      </td>
+    </tr>
+  </tbody>
+</table> 
+  
 <!-- Experimental Results -->
 <h2>Experimental Results</h2>
 <table>
   <tbody>
     <tr>
       <td valign="top" align="center">
-         <img width="90%" src="./GDN_Inpainting_files/Results.png"> 
+         <img width="90%" src="https://github.com/paradocx/LARNet/blob/main/fig/fig5_IJBA.png"> 
          <br>
          <p style="text-align:justify;">
          <font face="Times New Roman" >
-          Above figure is qualitative comparison about visual inpainting details with previous approaches, including PConv, PEN, and GConv. The From top to bottom splited three groups from CelebA-HQ, Places2 and Paris StreetView dataset, respectively.
+         Quantitative evaluation on the IJB-A dataset: verification and identification tasks with state of the arts.
          </font>
          </p>
          <br>
@@ -111,14 +144,25 @@
     </tr>
     <tr>
       <td valign="top" align="center">
-         <img width="90%" src="./GDN_Inpainting_files/Application.png"> 
+         <img width="90%" src="https://github.com/paradocx/LARNet/blob/main/fig/fig6_CFP.png"> 
          <br><br>
          <p style="text-align:justify;">
          <font face="Times New Roman" >
-          Some daily applications of our inpainting framework on image translation includes object removal (the left column), text removal (the middle column) and old photo
-          restoration (the right column). For each pair of images, the top image is the input and the bottom image is the image translation result.
+          Quantitative evaluation on the CFP-FP dataset: profile face verification challenge.
          </font>
          </p>
+      </td>
+    </tr>
+    <tr>
+      <td valign="top" align="center">
+         <img width="90%" src="https://github.com/paradocx/LARNet/blob/main/fig/fig7_general.png"> 
+         <br>
+         <p style="text-align:justify;">
+         <font face="Times New Roman" >
+         Quantitative evaluation on the LFW, YTF and CPLFW datasets: general face recognition.
+         </font>
+         </p>
+         <br>
       </td>
     </tr>
   </tbody>
@@ -131,14 +175,19 @@
   <tr>
     <p style="text-align:justify;">
     <font face="Times New Roman" >
-      Coming Soon!
+      @inproceedings{Yang2016LARNet,
+        author={Xiaolong Yang, Xiaohong Jia, Dihong Gong, Dong-Ming Yan, ZhiFeng Li, Wei Liu},
+         title={LARNet: Lie Algebra Residual Network for Face Recognition},
+     booktitle= {Proceedings of the 38th International Conference on Machine Learning (ICML2021)},
+          year={2021}
+}
     </font>
     </p>
   </tr>
   </tbody>
 </table>
 
-<!-- Download -->
+<!-- Download 
 <h2>Download</h2>
 <table>
   <tbody>
@@ -149,7 +198,7 @@
       </td>
     </tr>
   </tbody>
-</table>
+</table>-->
 
 </div>
 </body>
