--- a/index.html
+++ b/index.html
@@ -51,35 +51,12 @@
   <table border="0" width="100%">
   <tbody> 
 
-    <!-- Efficient Center Voting for Object Detection and 6D Pose Estimation in 3D Point Cloud -->
-   <!-- <tr>
-      <td>
-        <div align="center">
-          <img width="180" src="./TIP2021/2021_TIP_6DPose.png" alt="">
-        </div>
-      </td>
-      <td>
-        <a href="./TIP2021/2021_TIP_6DPose.pdf" target="_blank">Efficient Center Voting for Object Detection and 6D Pose Estimation in 3D Point Cloud</a>        
-        <br> 
-        Jianwei Guo,
-        Xuejun Xing,
-        <strong>Weize Quan</strong>, 
-        Dong-Ming Yan, 
-        Qingyi Gu, 
-        Yang Liu, 
-        Xiaopeng Zhang
-        <br> 
-        <i>IEEE Transactions on Image Processing, accept, 2021.</i>
-        <br>
-        [<a href="./TIP2021/2021_TIP_6DPose.pdf" target="_blank">PDF</a>]
-      </td>
-    </tr> -->
 
         <!-- Pixel-wise Dense Detector for Image Inpainting -->
     <tr>
       <td>
         <div align="center">
-          <img width="180" src="https://github.com/paradocx/LARNet/blob/main/fig/Fig0_headpic.png" alt="">
+          <img width="180" src="./LARNet(ICML2021)/Fig0_headpic.png" alt="">
         </div>
       </td>
       <td>
@@ -95,37 +72,14 @@
         <i>In Proceedings of the 38th International Conference on Machine Learning (ICML2021)</i>
         <br>
         [<a href="LARNet.html" target="_blank">Project Page</a>]
-        [<a href="https://arxiv.org/abs/2103.08147" target="_blank">PDF</a>]
+        [<a href="./LARNet(ICML2021)/xiaolonyang_ICML2021_Main.pdf" target="_blank">PDF</a>]
         [<a href="https://github.com/paradocx/LARNet/" target="_blank">Code</a>]
-        [<a href="https://github.com/paradocx/LARNet/blob/main/fig/xiaolonyang_ICML21_Sup.pdf" target="_blank">Supplement</a>] 
-        [<a href="https://github.com/paradocx/LARNet/blob/main/fig/ICML21_LARNet.pptx" target="_blank">Slides</a>]
+        [<a href="./LARNet(ICML2021)/xiaolonyang_ICML21_Sup.pdf" target="_blank">Supplement</a>] 
+        [<a href="./LARNet(ICML2021)/ICML21_LARNet.pptx" target="_blank">Slides</a>]
       </td>
     </tr>
     
-    <!-- Scene Text Removal via Cascaded Text Stroke Detection and Erasing -->
-   <!-- <tr>
-      <td>
-        <div align="center">
-          <img width="180" src="./Text2020/Text2020.png" alt="">
-        </div>
-      </td>
-      <td>
-        <a href="./Text2020/Text2020.pdf" target="_blank">Scene Text Removal via Cascaded Text Stroke Detection and Erasing</a>        
-        <br> 
-        Xuewei Bian, 
-        Chaoqun Wang,
-        <strong>Weize Quan</strong><sup>*</sup>, 
-        Juntao Ye, 
-        Xiaopeng Zhang, 
-        Dong-Ming Yan
-        <br> 
-        <i>CoRR abs/2011.09768, 2020</i>
-        <br>
-        [<a href="./Text2020/Text2020.pdf" target="_blank">PDF</a>]
-      </td>
-    </tr>
-
-   
+    
 
   </tbody>
 </table>  
