--- a/LARNet.html
+++ b/LARNet.html
@@ -44,7 +44,7 @@
 
     <tr>
       <td valign="top" align="center">
-         <img width="90%" src="https://github.com/paradocx/LARNet/blob/main/fig/Fig0_headpic.png">
+         <img width="90%" src="./LARNet(ICML2021)/Fig0_headpic.png">
          <br>
          <p style="text-align:justify;">
          <font face="Times New Roman" >
@@ -84,7 +84,7 @@ demonstrate that our method consistently outperforms the state-of-the-art ones.
   <tbody>
     <tr>
       <td valign="top" align="center">
-         <img width="90%" src="https://github.com/paradocx/LARNet/blob/main/fig/fig2_pipeline.png">
+         <img width="90%" src="./LARNet(ICML2021)/fig2_pipeline.png">
          <br>
          <p style="text-align:justify;">
          <font face="Times New Roman" >
@@ -103,7 +103,7 @@ demonstrate that our method consistently outperforms the state-of-the-art ones.
   <tbody>
     <tr>
       <td valign="top" align="center">
-         <img width="90%" src="https://github.com/paradocx/LARNet/blob/main/fig/fig3_featuredistribution.png"> 
+         <img width="90%" src="./LARNet(ICML2021)/fig3_featuredistribution.png"> 
          <br>
          <p style="text-align:justify;">
          <font face="Times New Roman" >
@@ -114,7 +114,7 @@ demonstrate that our method consistently outperforms the state-of-the-art ones.
     </tr>
     <tr>
       <td valign="top" align="center">
-         <img width="90%" src="https://github.com/paradocx/LARNet/blob/main/fig/fig4_reconstructionface.png"> 
+         <img width="90%" src="./LARNet(ICML2021)/fig4_reconstructionface.png"> 
          <br><br>
          <p style="text-align:justify;">
          <font face="Times New Roman" >
@@ -132,7 +132,7 @@ demonstrate that our method consistently outperforms the state-of-the-art ones.
   <tbody>
     <tr>
       <td valign="top" align="center">
-         <img width="90%" src="https://github.com/paradocx/LARNet/blob/main/fig/fig5_IJBA.png"> 
+         <img width="90%" src="./LARNet(ICML2021)/fig5_IJBA.png"> 
          <br>
          <p style="text-align:justify;">
          <font face="Times New Roman" >
@@ -144,7 +144,7 @@ demonstrate that our method consistently outperforms the state-of-the-art ones.
     </tr>
     <tr>
       <td valign="top" align="center">
-         <img width="90%" src="https://github.com/paradocx/LARNet/blob/main/fig/fig6_CFP.png"> 
+         <img width="90%" src="./LARNet(ICML2021)/fig6_CFP.png"> 
          <br><br>
          <p style="text-align:justify;">
          <font face="Times New Roman" >
@@ -155,7 +155,7 @@ demonstrate that our method consistently outperforms the state-of-the-art ones.
     </tr>
     <tr>
       <td valign="top" align="center">
-         <img width="90%" src="https://github.com/paradocx/LARNet/blob/main/fig/fig7_general.png"> 
+         <img width="90%" src="./LARNet(ICML2021)/fig7_general.png"> 
          <br>
          <p style="text-align:justify;">
          <font face="Times New Roman" >
@@ -176,9 +176,13 @@ demonstrate that our method consistently outperforms the state-of-the-art ones.
     <p style="text-align:justify;">
     <font face="Times New Roman" >
       @inproceedings{Yang2016LARNet,
+      <br>
         author={Xiaolong Yang, Xiaohong Jia, Dihong Gong, Dong-Ming Yan, ZhiFeng Li, Wei Liu},
+      <br>
          title={LARNet: Lie Algebra Residual Network for Face Recognition},
+      <br>
      booktitle= {Proceedings of the 38th International Conference on Machine Learning (ICML2021)},
+      <br>
           year={2021}
 }
     </font>
