--- a/index.html
+++ b/index.html
@@ -88,13 +88,17 @@
 <table id="tbExperiences" border="0" width="100%">
   <tbody>
     <tr>
-      <td> Sep. 2020 - Sep. 2021 &nbsp; Intern student (Rhino-Bird Program), Tencent Technologies Co., Ltd. (Shenzhen), directed by <a href="https://scholar.google.com/citations?user=VTrRNN4AAAAJ&hl=zh-en" target="_blank"> Zhifeng Li</td>
+      <td> Sep.2020 - Sep.2021 &nbsp; </td>   
+      <td> Intern student (Rhino-Bird Program), Tencent Technologies Co., Ltd. (Shenzhen), directed by <a href="https://scholar.google.com/citations?user=VTrRNN4AAAAJ&hl=zh-en" target="_blank"> Zhifeng Li</td>
     </tr>
-  <tr>
-      <td> Nov. 2019 - Mar. 2020 &nbsp; Intern student (Innovative Research Program), Alibaba Group (Beijing). </td>
+    <tr>
+      <td> Nov.2019 - Mar.2020 &nbsp; </td>   
+      <td> Intern student (Innovative Research Program), Alibaba Group (Beijing). </td>
     </tr>
+    <tr>
+      <td> Mar.2017 - Now. &nbsp; </td>   
+      <td> Visiting student,  National Laboratory of Pattern Recognition(NLPR), Institute of Automation, Chinese Academy of Sciences(CASIA) (Beijing), directed by <a href="https://sites.google.com/site/yandongming/" target="_blank"> Prof. Dong-Ming Yan</td>
     </tr>
-      <td> Mar. 2017 - Now. &nbsp; Visiting student,  National Laboratory of Pattern Recognition(NLPR), Institute of Automation, Chinese Academy of Sciences(CASIA) (Beijing), directed by <a href="https://sites.google.com/site/yandongming/" target="_blank"> Prof. Dong-Ming Yan</td>
   </tbody>
 </table>
 
