--- a/LARNet.html
+++ b/LARNet.html
@@ -140,7 +140,7 @@ demonstrate that our method consistently outperforms the state-of-the-art ones.
       <td valign="top" align="center">
          <img width="90%" src="./LARNet(ICML2021)/fig4_CFP.png"> 
          <br><br>
-         <p style="text-align:justify;">
+         <p style="text-align:center;">
          <font face="Times New Roman" >
           Quantitative evaluation on the CFP-FP dataset: profile face verification challenge.
          </font>
@@ -151,7 +151,7 @@ demonstrate that our method consistently outperforms the state-of-the-art ones.
       <td valign="top" align="center">
          <img width="90%" src="./LARNet(ICML2021)/fig5_general.png"> 
          <br>
-         <p style="text-align:justify;">
+         <p style="text-align:center;">
          <font face="Times New Roman" >
          Quantitative evaluation on the LFW, YTF and CPLFW datasets: general face recognition.
          </font>
@@ -167,36 +167,27 @@ demonstrate that our method consistently outperforms the state-of-the-art ones.
 <table>
   <tbody>
   <tr>
-    <p style="text-align:justify;">
+    <p style="text-align:left;">
     <font face="Times New Roman" >
       @inproceedings{Yang2016LARNet,
       <br>
-        author={Xiaolong Yang, Xiaohong Jia, Dihong Gong, Dong-Ming Yan, ZhiFeng Li, Wei Liu},
+       &nbsp &nbsp author={Xiaolong Yang, Xiaohong Jia, Dihong Gong, Dong-Ming Yan, ZhiFeng Li, Wei Liu},
       <br>
-         title={LARNet: Lie Algebra Residual Network for Face Recognition},
+       &nbsp &nbsp title={LARNet: Lie Algebra Residual Network for Face Recognition},
       <br>
-     booktitle= {Proceedings of the 38th International Conference on Machine Learning (ICML2021)},
+       &nbsp &nbsp booktitle= {Proceedings of the 38th International Conference on Machine Learning (ICML2021)},
       <br>
-          year={2021}
-}
+       &nbsp &nbsp year={2021}
+      <br>
+      }
     </font>
     </p>
   </tr>
   </tbody>
 </table>
 
-<!-- Download 
-<h2>Download</h2>
-<table>
-  <tbody>
-    <tr>
-      <td>
-          <strong>Paper</strong> [<a href="./GDN_Inpainting_files/GDN_Inpainting.pdf" target="_blank">PDF</a>] <br><br>
-          <strong>Code </strong> [<a href="https://github.com/Evergrow/GDN_Inpainting">Github</a>] <br><br>
-      </td>
-    </tr>
-  </tbody>
-</table>-->
+
+
 
 </div>
 </body>
