--- a/LARNet.html
+++ b/LARNet.html
@@ -110,7 +110,7 @@ demonstrate that our method consistently outperforms the state-of-the-art ones.
       <td valign="top" align="center">
          <img width="90%" src="./LARNet(ICML2021)/fig2_reconstructionface.png"> 
          <br><br>
-         <p style="text-align:justify;">
+         <p style="text-align:center;">
          <font face="Times New Roman" >
           Our method is robust to many factors, including gender, head decoration (hat), and face decoration (glasses, beard).
          </font>
@@ -128,7 +128,7 @@ demonstrate that our method consistently outperforms the state-of-the-art ones.
       <td valign="top" align="center">
          <img width="90%" src="./LARNet(ICML2021)/fig3_IJBA.png"> 
          <br>
-         <p style="text-align:justify;">
+         <p style="text-align:center;">
          <font face="Times New Roman" >
          Quantitative evaluation on the IJB-A dataset: verification and identification tasks with state of the arts.
          </font>
@@ -138,7 +138,7 @@ demonstrate that our method consistently outperforms the state-of-the-art ones.
     </tr>
     <tr>
       <td valign="top" align="center">
-         <img width="90%" src="./LARNet(ICML2021)/fig4_CFP.png"> 
+         <img width="90%" src="./LARNet(ICML2021)/fig4_CFPFP.png"> 
          <br><br>
          <p style="text-align:center;">
          <font face="Times New Roman" >
