--- a/index.html
+++ b/index.html
@@ -26,7 +26,14 @@
       <br><br>      
       <p>
           <br>
+          <td>
+            <div align="center">
+            <img width="30" src="./Homepage_files/fig/ucas.png" alt="">
+            </div>
+          </td>
+          <td>
           <a href="http://mmrc.amss.cas.cn/" target="_blank">Key Laboratory of Mathematics-Mechanization (KLMM)</a>
+          </td>
           <br>
           <a href="http://www.amss.ac.cn/" target="_blank">Academy of Mathematics and Systems Science of the Chinese Academy of Sciences (AMSS, CAS)</a>
           <br>
