--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
           <br>
           <td>
             <div align="center">
-            <img width="30" src="./Homepage_files/fig/ucas.png" alt="">
+            <img width="30" src="./Homepage_files/fig/amss.png" alt="">
             </div>
           </td>
           <td>
@@ -59,7 +59,7 @@
   <tbody> 
 
 
-        <!-- Pixel-wise Dense Detector for Image Inpainting -->
+        <!-- LARNet ICML2021 -->
     <tr>
       <td>
         <div align="center">
@@ -96,16 +96,16 @@
   <tbody>
     <tr>
       <td> Sep.2020 - Sep.2021 &nbsp; </td>   
-      <td> Intern student (Rhino-Bird Program), Tencent Technologies Co., Ltd. (Shenzhen), directed by <a href="https://scholar.google.com/citations?user=VTrRNN4AAAAJ&hl=zh-en" target="_blank"> Zhifeng Li</td>
+      <td> Visting student (Rhino-Bird Program), Tencent Technologies Co., Ltd. (Shenzhen), directed by <a href="https://scholar.google.com/citations?user=VTrRNN4AAAAJ&hl=zh-en" target="_blank"> Zhifeng Li</td>
     </tr>
-    <tr>
+   <!-- <tr>
       <td> Nov.2019 - Mar.2020 &nbsp; </td>   
       <td> Intern student (Innovative Research Program), Alibaba Group (Beijing). </td>
     </tr>
     <tr>
       <td> Mar.2017 - Now. &nbsp; </td>   
       <td> Visiting student,  National Laboratory of Pattern Recognition(NLPR), Institute of Automation, Chinese Academy of Sciences(CASIA) (Beijing), directed by <a href="https://sites.google.com/site/yandongming/" target="_blank"> Prof. Dong-Ming Yan</td>
-    </tr>
+    </tr>  -->
   </tbody>
 </table>
 
