--- a/index.html
+++ b/index.html
@@ -26,10 +26,8 @@
       <br><br>      
       <p>
           <br>
-          <td>
-            <div align="center">
-            <img width="30" src="./Homepage_files/fig/amss.png" alt="">
-            </div>
+          <td>    
+            <img width="30" style="float: left; display: inline;" src="./Homepage_files/fig/amss.png" alt="">
           </td>
           <td>
           <a href="http://mmrc.amss.cas.cn/" target="_blank">Key Laboratory of Mathematics-Mechanization (KLMM)</a>
