--- a/index.html
+++ b/index.html
@@ -26,6 +26,8 @@
       <br><br>      
       <p>
           <br>
+     <table>
+        <tbody>
         <tr>
           <td>    
             <img width="30" style="float: left; display: inline;" src="./Homepage_files/fig/amss.png" alt="">
@@ -33,7 +35,9 @@
           <td>
           <a href="http://mmrc.amss.cas.cn/" target="_blank">Key Laboratory of Mathematics-Mechanization (KLMM)</a>
           </td>
-        </tr>
+           </tr>
+           </tbody>
+         </table>
           <br>
           <a href="http://www.amss.ac.cn/" target="_blank">Academy of Mathematics and Systems Science of the Chinese Academy of Sciences (AMSS, CAS)</a>
           <br>
