--- a/index.html
+++ b/index.html
@@ -25,18 +25,13 @@
       <b><font face="Times New Roman" size="6">Xiaolong Yang</font><font size="6" face="楷体_GB2312"> （杨小龙）</font><font face="Times New Roman" size="6"></font></b>
       <br><br>      
       <p>
-          <br>
-     <table>
-        <tbody>
-        <tr>
-          <td>    
-            <img width="30" style="float: left; display: inline;" src="./Homepage_files/fig/amss.png" alt="">
-          </td>
-          <td>
-          <a href="http://mmrc.amss.cas.cn/" target="_blank">Key Laboratory of Mathematics-Mechanization (KLMM)</a>
-          </td>
-           </tr>
-           </tbody>
+         <table>
+         <tbody>
+            <tr>
+              <td> <img width="30" style="float: left; display: inline;" src="./Homepage_files/fig/amss.png" alt=""> </td>
+              <td> <a href="http://mmrc.amss.cas.cn/" target="_blank">Key Laboratory of Mathematics-Mechanization (KLMM)</a></td>
+            </tr>
+         </tbody>
          </table>
           <br>
           <a href="http://www.amss.ac.cn/" target="_blank">Academy of Mathematics and Systems Science of the Chinese Academy of Sciences (AMSS, CAS)</a>
