--- a/index.html
+++ b/index.html
@@ -28,16 +28,31 @@
          <table>
          <tbody>
             <tr>
-              <td> <img width="30" style="float: left; display: inline;" src="./Homepage_files/fig/amss.png" alt=""> </td>
+              <td> <img width="20" style="float: left; display: inline;" src="./Homepage_files/fig/amss.png" alt=""> </td>
               <td> <a href="http://mmrc.amss.cas.cn/" target="_blank">Key Laboratory of Mathematics-Mechanization (KLMM)</a></td>
             </tr>
          </tbody>
          </table>
           <br>
-          <a href="http://www.amss.ac.cn/" target="_blank">Academy of Mathematics and Systems Science of the Chinese Academy of Sciences (AMSS, CAS)</a>
+         <table>
+         <tbody>
+            <tr>
+              <td> <img width="20" style="float: left; display: inline;" src="./Homepage_files/fig/ucas.png" alt=""> </td>
+              <td> <a href="http://www.amss.ac.cn/" target="_blank">Academy of Mathematics and Systems Science of the Chinese Academy of Sciences (AMSS, CAS)</a></td>
+            </tr>
+         </tbody>
+         </table>        
           <br>
           <br>
-          Email: yangxiaolong17@mails.ucas.ac.cn
+          <table>
+         <tbody>
+            <tr>
+              <td> <img width="20" style="float: left; display: inline;" src="./Homepage_files/fig/email.png" alt=""> </td>
+              <td> Email: yangxiaolong17@mails.ucas.ac.cn</td>
+            </tr>
+         </tbody>
+         </table>
+         
       </p>
     </td>
   </tr>
