--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
          <tbody>
             <tr>
               <td> <img width="20" style="float: left; display: inline;" src="./Homepage_files/fig/amss.png" alt=""> </td>
-              <td> <a href="http://mmrc.amss.cas.cn/" target="_blank">Key Laboratory of Mathematics-Mechanization (KLMM)</a>, <a href="http://www.amss.ac.cn/" target="_blank">Academy of Mathematics and Systems Science of the Chinese Academy of Sciences (AMSS, CAS)</a></td></td>
+              <td> <a href="http://mmrc.amss.cas.cn/" target="_blank">Key Laboratory of Mathematics-Mechanization (KLMM)</a> of <a href="http://www.amss.ac.cn/" target="_blank">Academy of Mathematics and Systems Science</a>(KLMM, AMSS, CAS)</td>
             </tr>
          </tbody>
          </table>
@@ -47,7 +47,7 @@
           <table>
          <tbody>
             <tr>
-              <td> <img width="20" style="float: left; display: inline;" src="./Homepage_files/fig/email.png" alt=""> </td>
+              <td> <img width="25" style="float: left; display: inline;" src="./Homepage_files/fig/email.png" alt=""> </td>
               <td> Email: yangxiaolong17@mails.ucas.ac.cn</td>
             </tr>
          </tbody>
