--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
          <tbody>
             <tr>
               <td> <img width="20" style="float: left; display: inline;" src="./Homepage_files/fig/amss.png" alt=""> </td>
-              <td> <a href="http://mmrc.amss.cas.cn/" target="_blank">Key Laboratory of Mathematics-Mechanization (KLMM)</a> of <a href="http://www.amss.ac.cn/" target="_blank">Academy of Mathematics and Systems Science</a>(KLMM, AMSS, CAS)</td>
+              <td> <a href="http://mmrc.amss.cas.cn/" target="_blank">Key Laboratory of Mathematics-Mechanization (KLMM)</a> of <a href="http://www.amss.ac.cn/" target="_blank">Academy of Mathematics and Systems Science of the Chinese Academy of Sciences</a>(KLMM, AMSS, CAS)</td>
             </tr>
          </tbody>
          </table>
@@ -38,7 +38,7 @@
          <tbody>
             <tr>
               <td> <img width="20" style="float: left; display: inline;" src="./Homepage_files/fig/ucas.png" alt=""> </td>
-              <td> <a href="https://english.ucas.ac.cn/" target="_blank">University of the Chinese Academy of Sciences (UCAS)</a></td>
+              <td> <a href="https://english.ucas.ac.cn/" target="_blank">University of the Chinese Academy of Sciences </a>(UCAS)</td>
             </tr>
          </tbody>
          </table>        
