--- a/LARNet.html
+++ b/LARNet.html
@@ -121,7 +121,7 @@ demonstrate that our method consistently outperforms the state-of-the-art ones.
 </table> 
   
 <!-- Experimental Results -->
-<h2>Experimental Results</h2>
+<!--<h2>Experimental Results</h2>
 <table>
   <tbody>
     <tr>
@@ -160,7 +160,7 @@ demonstrate that our method consistently outperforms the state-of-the-art ones.
       </td>
     </tr>
   </tbody>
-</table>
+</table>-->
 
 <!-- Bibtex -->
 <h2>Bibtex</h2>
